feat: Java 25 환경에서 ByteBuddy 에이전트 성능 측정 성공